--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ For one day only, we are offering families a free kite to celebrate the achievem
 Come on down to Central Park and pick up your free DBC branded kite this morning before noon, and enjoy the park and all its glory, before they are overshadowed by houses in the next few years.
     <br><br>
     
-Your kite will soar higher than any other kite, and is made from the finest materials.  Show your appreciation for the Council and all their achievements, and fly your kite with pride!<br><br>
+Your kite will soar higher than any other kite, and is made from the finest materials.  <br><br>Show your appreciation for the Council and all their achievements, and fly your kite with pride!<br><br>
    <img src="kites.png" width=600> <br><br>
 Remember - you wouldn't get this at any other Council!
     <br><br>
