--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 
 
 </head>
+<audio controls autoplay>
+  <source src="https://ia800409.us.archive.org/10/items/lets_go_fly_a_kite/Lets_Go_Fly_A_Kite.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 <body>
 
 <h3 style="font-family:sans-serif;font-size:200%">Celebrating the achievements of Dartford Council!</h3>
